lesson 29.1 homework refactoring